src/pages/home/index.scss
 .home-page {
    .second-section {
            .second-inner {
                display: flex;
                gap: 12em;
            }
        }
    
        .third-section {
            .third-inner {
                display: flex;
                justify-content: space-between;
                align-items: end;
                padding: 0 0 3em;
                .title {
                    width: 60%;
                }
            }
        }
    
        .forth-section {
            position: relative;
            padding: 5em 6em;
            .forth-inner {
    
                .top {
                    display: flex;
                    justify-content: space-between;
                    gap: 5rem;
    
                    .tutor-container {
                        display: flex;
                        flex-direction: column;
                        gap: 2rem;
    
                        .tutor-img {
                            width: 100%;
                            max-width: 450px;
                            height: 700px;
                            object-fit: cover;
                            box-shadow: var(--global);
                        }
                    }
                }
            }
    
            .list-container {
                margin-top: 10em;
    
                li {
                    display: flex;
                    align-items: center;
                    gap: 2em;
                }
    
                .title {
                    padding: 1em 0;
                }
    
                .desc {
                    font-family: 'Inter', serif;
                    font-size: 18px;
                }
            }
        }
 }

 @media screen and (max-width: 768px) {
    .home-page {
        .second-section {
            .second-inner {
                flex-direction: column;
                gap: 4em;
            }
        }
    
        .third-section {
            .third-inner {
                flex-direction: column;
                align-items: start;
                gap: 2em;
                padding: 2em;
    
                .title {
                    width: 100%;
                }
            }
        }
    
        .forth-section {
            padding: 2em;
            .forth-inner {
                z-index: 2;
    
                .top {
                    flex-direction: column-reverse;
                    gap: 2rem;
    
                    .tutor-container {
                        flex-direction: column;
                        gap: 2rem;
                    }
                }
            }
    
            .list-container {
                margin-top: 4em;
    
                li {
                    gap: 1em;
                }
    
                .desc {
                    font-family: 'Inter', serif;
                    font-size: 14px;
                }
            }
        }
    }
}

